--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
+		"react-cursor-position": "^3.0.3",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-hook-form": "^7.11.0",
